--- a/Paginas/Invitación.html
+++ b/Paginas/Invitación.html
@@ -18,7 +18,7 @@
 	<h4>¡Esperamos verte pronto! </h4>
 	
 	<div>
-      <a href="../Paginas/IndiceEte.html" class="three">Índice</a>
+      <a href="asdqwe4.github.io/Paginas/IndiceEte.html" class="three">Índice</a>
 	</div>
 
 </body> 
