--- a/Paginas/MotivoInv.html
+++ b/Paginas/MotivoInv.html
@@ -27,7 +27,7 @@
 		</p>
 	
 	<div>
-     	 <a href="../Paginas/IndiceETE.html" class="three">Índice</a>
+     	 <a href="../Paginas/IndiceEte.html" class="three">Índice</a>
 	</div>
 
 </body> 
