--- a/Paginas/Aprendizaje.html
+++ b/Paginas/Aprendizaje.html
@@ -75,8 +75,9 @@
 	nos ayuda a desarrollar un aprendizaje más autónomo y un pensamiento más crítico.</h6>
 	
 	<div>
-      <a href="../Paginas/IndiceETE.html" class="three">Índice</a>
+     	 <a href="../Paginas/IndiceEte.html" class="three">Índice</a>
 	</div>
+
 
 </body> 
 </html>
