--- a/Paginas/InfoETE.html
+++ b/Paginas/InfoETE.html
@@ -29,7 +29,7 @@
 	</div>
 	
 	<div>
-      <a href="../Paginas/IndiceETE.html" class="three">Índice</a>
+     	 <a href="../Paginas/IndiceEte.html" class="three">Índice</a>
 	</div>
 
 </body> 
