--- a/Paginas/Masgusta.html
+++ b/Paginas/Masgusta.html
@@ -22,7 +22,7 @@
 	</div>
 	
 	<div>
-      <a href="../Paginas/IndiceETE.html" class="three">Índice</a>
+     	 <a href="../Paginas/IndiceEte.html" class="three">Índice</a>
 	</div>
 
 </body> 
