--- a/Paginas/Menosgusta.html
+++ b/Paginas/Menosgusta.html
@@ -20,7 +20,7 @@
 	</div>
 	
 	<div>
-      <a href="../Paginas/IndiceETE.html" class="three">Índice</a>
+     	 <a href="../Paginas/IndiceEte.html" class="three">Índice</a>
 	</div>
 
 </body> 
