--- a/Paginas/Aprendizaje.html
+++ b/Paginas/Aprendizaje.html
@@ -69,7 +69,7 @@
 			</Table>
 	</div>
 	<br><br><br><br><br><br><br><br><br>
-	<h6>Todas estas habilidades son fundamentales de aprender, ya que resultan sumamente útiles en el día a día, independientemente del tipo de trabajo 
+	<h6>Estos son los temas que se abordan durante el año, así como algunos otros. Todas estas habilidades son fundamentales de aprender, ya que resultan sumamente útiles en el día a día, independientemente del tipo de trabajo 
 	que realices. Facilitan las tareas que llevamos a cabo. Por ejemplo, al crear un documento en Word o una presentación en PowerPoint, nos permiten 
 	realizarlos de manera más eficiente y aprovechar las herramientas de forma adecuada. Sin embargo, este ETE no solo cumple esa función, sino que también 
 	nos ayuda a desarrollar un aprendizaje más autónomo y un pensamiento más crítico.</h6>
